Update contact email to spiff007@gmail.com

--- a/proposal_for_devovo_ab-design_benchmark/index.html
+++ b/proposal_for_devovo_ab-design_benchmark/index.html
@@ -718,7 +718,7 @@
             </div>
             
             <div style="margin-top: 3rem;">
-                <a href="mailto:consortium@dadb.org?subject=DADB%20Consortium%20Inquiry" class="btn btn-primary" style="font-size: 1.2rem; padding: 1.2rem 2.5rem;">
+                <a href="mailto:spiff007@gmail.com?subject=DADB%20Consortium%20Inquiry" class="btn btn-primary" style="font-size: 1.2rem; padding: 1.2rem 2.5rem;">
                     <span>✉️</span> Contact the Consortium
                 </a>
                 <p style="margin-top: 1rem; opacity: 0.7; font-size: 0.9rem;">Private test set targets are confidential and shared only under NDA</p>
