Add Google Analytics tag (G-CS6CVJG1D9) to proposal page

--- a/proposal_for_devovo_ab-design_benchmark/index.html
+++ b/proposal_for_devovo_ab-design_benchmark/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CS6CVJG1D9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-CS6CVJG1D9');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DADB-v1.0: A Therapeutic Decathlon for De Novo Antibody Design</title>
