Update antibody comparison page with v7 PDF - adds training data transparency analysis

--- a/abs_for_cancer_targets/index.html
+++ b/abs_for_cancer_targets/index.html
@@ -95,12 +95,12 @@
         <p class="date">January 2026 (Updated)</p>
 
         <div class="update-notice">
-            <p><strong>UPDATE:</strong> Was made aware of <strong>Latent-X2</strong> by the Latent Labs team. Incorporated their results and re-ran my analysis pipeline to generate this new blog post &amp; technical report.</p>
-            <p>Key additions: First-ever immunogenicity data on AI-designed antibodies, macrocyclic peptide design capability, and the tightest binding affinity reported (26.2 pM).</p>
+            <p><strong>UPDATE (Feb 2026):</strong> Technical report updated to v7 with comprehensive analysis of <strong>training data transparency</strong> across all platforms—how Origin-1's temporal filtering sets the gold standard, and why "unseen target" claims need rigorous verification.</p>
+            <p>Previously: Incorporated <strong>Latent-X2</strong> results with first-ever immunogenicity data, macrocyclic peptide design capability, and 26.2 pM binding affinity.</p>
         </div>
 
         <div class="pdf-notice">
-            <p>This post is intended to be brief and accessible to a lay audience. For a more scientific and detailed exposition, <a href="/files/v5_denovo_antibody_design_comparison.pdf" target="_blank">read the full technical report (PDF)</a>.</p>
+            <p>This post is intended to be brief and accessible to a lay audience. For a more scientific and detailed exposition, <a href="/files/v7_denovo_antibody_design_comparison.pdf" target="_blank">read the full technical report (PDF)</a>.</p>
         </div>
 
         <div class="primer-section">
@@ -281,7 +281,7 @@
         <p>The $200 billion antibody market isn't going away. But how we populate it is about to change fundamentally.</p>
 
         <div class="pdf-notice" style="margin-top: 2em;">
-            <p><strong>Want more depth?</strong> For detailed methodology comparisons, additional oncology targets, and full citations, <a href="/files/v5_denovo_antibody_design_comparison.pdf" target="_blank">read the comprehensive technical report (PDF)</a>.</p>
+            <p><strong>Want more depth?</strong> For detailed methodology comparisons, training data transparency analysis, additional oncology targets, and full citations, <a href="/files/v7_denovo_antibody_design_comparison.pdf" target="_blank">read the comprehensive technical report (PDF) — Updated Feb 2026</a>.</p>
         </div>
 
         <h2>Acknowledgments</h2>
