Add Google Analytics to FLAb dataset analysis page

--- a/flab_dataset_analyses/index.html
+++ b/flab_dataset_analyses/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Does Developability Come For Free? | FLAb Dataset Analysis</title>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBDFWXLS1K"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-WBDFWXLS1K');
+    </script>
     <meta name="description" content="Analysis of the FLAb antibody benchmark testing whether de novo design models learn developability without explicit training.">
     
     <!-- Open Graph / Social -->
