feat(rfab-harness): link scientific preprint PDF

--- a/harness_for_rfantibody/index.html
+++ b/harness_for_rfantibody/index.html
@@ -88,6 +88,12 @@
         <p class="subtitle">Campaign orchestration for de novo antibody design against cancer and rare disease targets</p>
         <p class="date">February 2026</p>
 
+        <div style="margin-bottom: 2em;">
+            <a href="v0_scientific_preprint.pdf" style="background: var(--accent); color: white; padding: 0.8em 1.2em; border-radius: 6px; text-decoration: none; font-weight: 600; display: inline-flex; align-items: center;">
+                <span style="font-size: 1.2em; margin-right: 0.5em;">📄</span> Read the Scientific Preprint
+            </a>
+        </div>
+
         <div class="motivation-box">
             <h3>Why this exists</h3>
             <p>In January 2025, the Baker Lab published <a href="https://doi.org/10.1038/s41586-024-08480-5" target="_blank">RFAntibody</a>&mdash;the first open-source pipeline for de novo antibody design using diffusion models. It demonstrated atomically accurate design of single-domain antibodies against five therapeutic targets.</p>
